# duckdb

./: ARCH_NOTES.md  CHANGES.md  CLAUDE.md  Discussion.md  Task.md  __locale.gcov  __split_buffer.gcov  ai_extension.cpp.gcov  ai_extension.hpp.gcov  ai_filter.cpp.gcov  allocate_at_least.h.gcov  allocation_guard.h.gcov  allocator.h.gcov  allocator_destructor.h.gcov  allocator_traits.h.gcov  atomic_base.h.gcov  basic_ostream.h.gcov  char_traits.h.gcov  comp.h.gcov  compressed_pair.h.gcov  condition_variable.h.gcov  constexpr_c_functions.h.gcov  cxx_atomic_impl.h.gcov  data_chunk.hpp.gcov  duration.h.gcov  error_code.h.gcov  exception.hpp.gcov  exception_format_value.hpp.gcov  exception_guard.h.gcov  exception_ptr.h.gcov  function.h.gcov  function.hpp.gcov  future.gcov  helper.hpp.gcov  initializer_list.gcov  invoke.h.gcov  ios.gcov  limits.gcov  locale.gcov  lock_guard.h.gcov  (+38 more)
extension/ai/: AI_WINDOW_LIMITATIONS.md  CMakeLists.txt  COVERAGE_REPORT.md  HTTP_POC_FINDINGS.md  M3_IMPLEMENTATION.md  README.md  TASK_16_FINDINGS.md  TASK_16_PLAN.md  USAGE_GUIDE.md  __locale.gcov  __split_buffer.gcov  ai_extension_loadable.cpp  ai_filter.cpp.gcov  allocate_at_least.h.gcov  allocation_guard.h.gcov  allocator.h.gcov  allocator_destructor.h.gcov  allocator_traits.h.gcov  atomic_base.h.gcov  basic_ostream.h.gcov  build.sh  build_simple.sh  build_with_coverage.sh  char_traits.h.gcov  comp.h.gcov  compressed_pair.h.gcov  condition_variable.h.gcov  constexpr_c_functions.h.gcov  coverage_analysis.md  coverage_cpp_summary.md  cxx_atomic_impl.h.gcov  data_chunk.hpp.gcov  duration.h.gcov  error_code.h.gcov  exception.hpp.gcov  exception_format_value.hpp.gcov  exception_guard.h.gcov  exception_ptr.h.gcov  function.h.gcov  function.hpp.gcov  (+47 more)
extension/ai/docs/: AI_EXTENSION_API.md  BUILD_GUIDE.md  RETRY_LOGIC.md
extension/ai/include/: ai_aggregate.hpp  ai_extension.hpp  ai_function_executor.hpp  ai_functions.hpp  http_client_interface.hpp
extension/ai/src/: ai_aggregate.cpp  ai_extension.cpp  ai_filter.cpp  ai_similarity.cpp  http_client.cpp  http_poc.cpp
extension/ai/tests/: GMOCK_INTEGRATION.md  __locale.gcov  __split_buffer.gcov  ai_filter.cpp.gcov  all_modes_coverage_test.sh  allocate_at_least.h.gcov  allocation_guard.h.gcov  allocator.h.gcov  allocator_destructor.h.gcov  allocator_traits.h.gcov  basic_ostream.h.gcov  char_traits.h.gcov  comp.h.gcov  comprehensive_coverage_test.sql  compressed_pair.h.gcov  condition_variable.h.gcov  constexpr_c_functions.h.gcov  data_chunk.hpp.gcov  duration.h.gcov  error_code.h.gcov  exception.hpp.gcov  exception_format_value.hpp.gcov  exception_guard.h.gcov  exception_ptr.h.gcov  final_coverage_test.sql  function.h.gcov  function.hpp.gcov  future.gcov  helper.hpp.gcov  initializer_list.gcov  invoke.h.gcov  ios.gcov  limits.gcov  locale.gcov  lock_guard.h.gcov  max.h.gcov  max_coverage_test.sql  min.h.gcov  mock_popen.cpp  mutex.h.gcov  (+50 more)
extension/ai/tests/gtest/: CMakeLists.txt  __locale.gcov  __split_buffer.gcov  __tree.gcov  ai_filter_test.cpp  ai_filter_test.cpp.gcov  ai_function_executor.hpp.gcov  allocate_at_least.h.gcov  allocation_guard.h.gcov  allocator.h.gcov  allocator_destructor.h.gcov  allocator_traits.h.gcov  atomic_base.h.gcov  basic_ostream.h.gcov  build_and_test.sh  char_traits.h.gcov  comp.h.gcov  compressed_pair.h.gcov  constexpr_c_functions.h.gcov  construct_at.h.gcov  convert_to_integral.h.gcov  cxx_atomic_impl.h.gcov  duration.h.gcov  exception.h.gcov  fill_n.h.gcov  function.h.gcov  gmock-actions.h.gcov  gmock-cardinalities.h.gcov  gmock-internal-utils.h.gcov  gmock-matchers.h.gcov  gmock-spec-builders.h.gcov  gtest-assertion-result.h.gcov  gtest-internal.h.gcov  gtest-matchers.h.gcov  gtest-message.h.gcov  gtest-port.h.gcov  gtest-printers.h.gcov  gtest.h.gcov  http_client.cpp.gcov  http_client_interface.hpp.gcov  (+28 more)
extension/ai/tests/gtest/mock/: mock_interfaces.hpp
extension/ai/tests/sql/: test_ai_aggregate.sql
test/: CMakeLists.txt
test/ai_unittest/: CMakeLists.txt
test/extension/: CMakeLists.txt
